add reset password email send

--- a/packages/ht-core/src/utils/emailService/templates/resetPasswordTemplate.handlebars
+++ b/packages/ht-core/src/utils/emailService/templates/resetPasswordTemplate.handlebars
@@ -118,8 +118,8 @@
         </tr>
         <tr>
           <td class="main-container container-padding" bgcolor="#ffffff">
-            <p>Thank you for becoming a HERO Traveler, {{fullName}}.  Let the adventure begin!</p>
-            <p>Please <a href={{confirmationUrl}}>confirm your email</a> to get started.</p>
+            <p>{{fullName}}, you have requested to change your HERO Traveler password.</p>
+            <p>Please <a href={{resetPasswordUrl}}>follow this link</a> to change your password.</p>
           </td>
         </tr>
       </table>
