--- a/packages/cms/src/templates/navArrows.njk
+++ b/packages/cms/src/templates/navArrows.njk
@@ -1,6 +1,6 @@
 {% macro leftArrow(page, sortBy, direction, searchType)%}
   <div>
-    <a class="btn" href="/{{searchType}}?sortBy={{sortBy}}&page={{page - 1}}&direction={{direction}}">
+    <a class="btn" href="/{{searchType}}?sortby={{sortBy}}&page={{(page - 1) if (page > 1) else 0}}&direction={{direction}}">
       <i class="fa fa-arrow-left m2"></i>
       Previous Page
     </a>
@@ -10,7 +10,7 @@
 
 {% macro rightArrow(page, sortBy, direction, searchType)%}
   <div> 
-    <a class="btn" href="/{{searchType}}?sortBy={{sortBy}}&page={{(page | int) + 1}}&direction={{direction}}">
+    <a class="btn" href="/{{searchType}}?sortby={{sortBy}}&page={{(page | int) + 1}}&direction={{direction}}">
       Next Page
       <i class="fa fa-arrow-right m2"></i>
     </a>
