--- a/packages/cms/src/templates/users.njk
+++ b/packages/cms/src/templates/users.njk
@@ -30,7 +30,7 @@
             <td>{{user.profile.fullName}}</td>
             <td>{{user.createdString }}</td>
             <td>{{user.role}}</td>
-            <td> <a href="/edit?id={{user._id}}"><i class="fa fa-pencil"></i></a></td>
+            <td> <a href="/users/edit?id={{user._id}}"><i class="fa fa-pencil"></i></a></td>
           </tr>
         {%  endfor %}
       </tbody>
