fixed upsert, img and fullname sort bugs

--- a/packages/cms/src/templates/edit-stories.njk
+++ b/packages/cms/src/templates/edit-stories.njk
@@ -7,7 +7,7 @@
     <label>Sponsored By</label>
     <input name="sponsoredBy" type="text" value="{{data.sponsoredBy}}" class="block col-12 mb1 field">
     <label>Author</label>
-    <input name="author" type="text" value="{{data.author}}" class="block col-12 mb1 field">
+    <input name="author" type="text" value="{{data.author.username}}" class="block col-12 mb1 field">
     <label class="block col-12 mb2">
       <input name="feature" type="checkbox" checked>
       Feature
