--- a/packages/cms/src/templates/users.njk
+++ b/packages/cms/src/templates/users.njk
@@ -16,7 +16,7 @@
       <tr>
         <th><a href="/users?sortby=username&direction={{ '1' if direction === '-1' else '-1' }}">Username</a></th>
         <th><a href="/users?sortby=email&direction={{ '1' if direction === '-1' else '-1' }}">Email</a></th>
-        <th><a href="/users?sortby=profile.fullname&direction={{ '1' if direction === '-1' else '-1' }}">Full Name</a></th>
+        <th><a href="/users?sortby=profile.fullName&direction={{ '1' if direction === '-1' else '-1' }}">Full Name</a></th>
         <th><a href="/users?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Joined</a></th>
         <th><a href="/users?sortby=role&direction={{ '1' if direction === '-1' else '-1' }}">User Type</a></th>
         <th>Edit</th>
