--- a/packages/cms/src/templates/categories.njk
+++ b/packages/cms/src/templates/categories.njk
@@ -26,10 +26,11 @@
       </thead>
       <tbody>
         {% for category in data %}
+          {% set imagePath = category.image.versions.thumbnail240.path %}
           <tr>
             <td>{{category.title}}</td>
             <td>{{category.createdString}}</td>
-            <td>IMAGE GOES HERE</td>
+            <td><img height="120" width="120" src="https://s3.amazonaws.com/hero-traveler/{{imagePath}}"/></td>
             <td> <a href="/categories/edit?id={{category._id}}"><i class="fa fa-pencil"></i></a></td>
           </tr>
         {%  endfor %}
