delete feature working and added to tables

--- a/packages/cms/src/templates/edit-users.njk
+++ b/packages/cms/src/templates/edit-users.njk
@@ -20,5 +20,6 @@
     <button type="submit" class="btn btn-primary">Change</button>
     <button type="reset" class="btn btn-primary black bg-gray">Cancel</button>
   </form>
+  <button class="btn bg-red ml2"><a class="white" href="/users/delete?id={{data._id}}">Delete Entry</a></button>
   <div class="m2">{{ data }}</div>
 {% endblock %}
