--- a/packages/cms/src/templates/stories.njk
+++ b/packages/cms/src/templates/stories.njk
@@ -17,6 +17,7 @@
         <th><a href="/stories?sortby=title&direction={{'1' if direction === '-1' else '-1' }}">Title</a></th>
         <th><a href="/stories?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Published</a></th>
         <th><a href="/stories?sortby=author.username&direction={{ '1' if direction === '-1' else '-1' }}">Author</a></th>
+        <th>Hidden</th>
         <th>Edit</th>
       </tr>
       </thead>
@@ -26,6 +27,7 @@
             <td>{{story.title}}</td>
             <td>{{story.createdAt}}</td>
             <td>{{story.author.username}}</td>
+            <td>{{story.deleted}}</td>
             <td> <a href="/stories/edit?id={{story._id}}"><i class="fa fa-pencil"></i></a></td>
           </tr>
         {%  endfor %}
