--- a/packages/cms/src/templates/categories.njk
+++ b/packages/cms/src/templates/categories.njk
@@ -20,6 +20,7 @@
       <tr>
         <th><a href="/categories?sortby=title&direction={{ '1' if direction === '-1' else '-1' }}">Title</a></th>
         <th><a href="/categories?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Created</a></th>
+        <th>Hidden</th>
         <th>Image</th>
         <th>Edit</th>
       </tr>
@@ -30,6 +31,7 @@
           <tr>
             <td>{{category.title}}</td>
             <td>{{category.createdString}}</td>
+            <td>{{category.deleted}}</td>
             <td><img height="120" width="120" src="https://s3.amazonaws.com/hero-traveler/{{imagePath}}"/></td>
             <td> <a href="/categories/edit?id={{category._id}}"><i class="fa fa-pencil"></i></a></td>
           </tr>
