--- a/packages/cms/src/templates/edit-stories.njk
+++ b/packages/cms/src/templates/edit-stories.njk
@@ -19,5 +19,6 @@
     <button type="submit" class="btn btn-primary">Change</button>
     <button type="reset" class="btn btn-primary black bg-gray">Cancel</button>
   </form>
+  <button class="btn bg-red ml2"><a class="white" href="/stories/delete?id={{data._id}}">Delete Entry</a></button>
   <div class="m2">{{ data }}</div>
 {% endblock %}
