remove dead code, console.logs

--- a/packages/cms/src/templates/categories.njk
+++ b/packages/cms/src/templates/categories.njk
@@ -20,7 +20,7 @@
       <tr>
         <th><a href="/categories?sortby=title&direction={{ '1' if direction === '-1' else '-1' }}">Title</a></th>
         <th><a href="/categories?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Created</a></th>
-        <th>Hidden</th>
+        <th>Deleted</th>
         <th>Image</th>
         <th>Edit</th>
       </tr>
