--- a/packages/cms/src/templates/stories.njk
+++ b/packages/cms/src/templates/stories.njk
@@ -17,7 +17,7 @@
         <th><a href="/stories?sortby=title&direction={{'1' if direction === '-1' else '-1' }}">Title</a></th>
         <th><a href="/stories?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Published</a></th>
         <th><a href="/stories?sortby=author.username&direction={{ '1' if direction === '-1' else '-1' }}">Author</a></th>
-        <th>Hidden</th>
+        <th>Deleted</th>
         <th>Edit</th>
       </tr>
       </thead>
