--- a/packages/cms/src/templates/users.njk
+++ b/packages/cms/src/templates/users.njk
@@ -19,7 +19,7 @@
         <th><a href="/users?sortby=profile.fullName&direction={{ '1' if direction === '-1' else '-1' }}">Full Name</a></th>
         <th><a href="/users?sortby=createdAt&direction={{ '1' if direction === '-1' else '-1' }}">Date Joined</a></th>
         <th><a href="/users?sortby=role&direction={{ '1' if direction === '-1' else '-1' }}">User Type</a></th>
-        <th>Hidden</th>
+        <th>Deleted</th>
         <th>Edit</th>
       </tr>
       </thead>
