--- a/packages/web/src/video-styles.css
+++ b/packages/web/src/video-styles.css
@@ -6,6 +6,10 @@
     background-color: #000;
 }
 
+.rh5v-DefaultPlayer_component:fullscreen {
+    height: 100%;
+}
+
 .rh5v-DefaultPlayer_video {
     width: 100%;
     height: 100%;
