--- a/packages/cms/src/templates/edit-stories.njk
+++ b/packages/cms/src/templates/edit-stories.njk
@@ -16,6 +16,12 @@
       <input name="featureAll" type="checkbox" checked>
       Feature All
     </label>
+    <label class="block col-12 mb2">
+      {% if data.flagged %} <input name="flagged" type="checkbox" checked>
+      {% else %} <input name="flagged" type="checkbox">
+      {% endif %}
+      Flagged
+    </label>
     <button type="submit" class="btn btn-primary">Change</button>
     <button type="reset" class="btn btn-primary black bg-gray">Cancel</button>
   </form>
