Change reset password email wording.

--- a/packages/ht-core/src/utils/emailService/templates/resetPasswordTemplate.handlebars
+++ b/packages/ht-core/src/utils/emailService/templates/resetPasswordTemplate.handlebars
@@ -119,7 +119,7 @@
         <tr>
           <td class="main-container container-padding" bgcolor="#ffffff">
             <p>{{fullName}}, you have requested to change your HERO Traveler password.</p>
-            <p>Please <a href={{resetPasswordUrl}}>follow this link</a> to change your password.</p>
+            <p>Please <a href={{resetPasswordUrl}}>follow this link</a> on your mobile device to change your password.</p>
           </td>
         </tr>
       </table>
