--- a/packages/web/src/video-styles.css
+++ b/packages/web/src/video-styles.css
@@ -1,5 +1,7 @@
 .rh5v-DefaultPlayer_component {
     height: 600px;
+    max-width: 800px;
+    margin: auto;
     position: relative;
     font-family: Helvetica;
     font-size: 11px;
