--- a/packages/web/src/App/Components/CreateStory/Styles/EditorStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/EditorStyles.css
@@ -12,7 +12,7 @@
   padding-bottom: 30px;
   font-family: 'Source Sans Pro';
   font-weight: 600;
-  letter-spacing: 1.5px;
+  letter-spacing: .2px;
   font-size: 24px;
   color: #1a1c21;
 }
