--- a/packages/web/src/App/Components/Styles/RightModalStyles.css
+++ b/packages/web/src/App/Components/Styles/RightModalStyles.css
@@ -1,29 +1,29 @@
 .right-modal {
-    position: absolute;
-    width: "570px";
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 'auto';
-    padding: 0;
-    border-radius: 0;
-    background-color: white;
-    outline: none;
-    overflow-y: scroll;
+  position: absolute;
+  width: 570px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: auto;
+  padding: 0;
+  border-radius: 0;
+  background-color: white;
+  outline: none;
+  overflow-y: scroll;
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0, .5);
-    z-index: 100;
-} 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
 
 @media (max-width: 768px) {
-    .right-modal {
-         width: 100vw;
-    }
+  .right-modal {
+    width: 100vw;
+  }
 }
