Fellow User Type
- adding a badgeHelper to shared
- adding fellow-badge.png asset to themes and images
- trying to refactor app to use hasBadge and roleToIconName
- trying to refactor web to use hasBadge and roleToIconName
- trying to update ht-core, ht-util and cms to allow new Fellow user type

--- a/packages/cms/src/templates/edit-users.njk
+++ b/packages/cms/src/templates/edit-users.njk
@@ -20,6 +20,7 @@
       {{ optionTag('contributor', data.role)}}
       {{ optionTag('brand', data.role)}}
       {{ optionTag('founding member', data.role)}}
+      {{ optionTag('fellow', data.role)}}
     </select>
     <label class="block col-12 mb2">
       <input name="featured" type="checkbox" checked>
