--- a/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
@@ -1,9 +1,10 @@
 /*
-Custom theming through the side toolbar plugin is currently not working, so
+SIDE TOOLBAR
+
+Note: Custom theming through the side toolbar plugin is currently not working, so
 modifying the Side Toolbar classes directly. Should be revised later
 
 class names derived from 'draft-js-side-toolbar-plugin/lib/plugin.css'
-
 */
 
 @import '../../../../../node_modules/draft-js-side-toolbar-plugin/lib/plugin.css';
@@ -44,4 +45,89 @@ class names derived from 'draft-js-side-toolbar-plugin/lib/plugin.css'
 
 .draftJsToolbar__active__3qcpF svg {
   fill: #ed1e2e;
+}
+
+/*
+INLINE TOOLBAR
+
+class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
+*/
+.draftJsToolbar__buttonWrapper__1Dmqh {
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.draftJsToolbar__button__qi1gf {
+  background: #1a1c21;
+  color: #fff;
+  font-size: 18px;
+  border: 0;
+  padding-top: 5px;
+  vertical-align: bottom;
+  height: 34px;
+  width: 36px;
+  border-radius: 4px;
+
+}
+
+.draftJsToolbar__button__qi1gf svg {
+  fill: #fff;
+}
+
+.draftJsToolbar__button__qi1gf:hover, .draftJsToolbar__button__qi1gf:focus {
+  background: #1a1c21;
+  outline: 0; /* reset for :focus */
+}
+
+.draftJsToolbar__active__3qcpF {
+  background: #1a1c21;
+  color: #ed1e2e;
+}
+
+.draftJsToolbar__active__3qcpF svg {
+  fill: #ed1e2e;
+}
+.draftJsToolbar__separator__3U7qt {
+  display: inline-block;
+  border-right: 1px solid #9e9e9e;
+  height: 20px;
+  margin: 0 0.25em 3px;
+}
+.draftJsToolbar__toolbar__dNtBH {
+  left: 50%;
+  -webkit-transform: translate(-50%) scale(0);
+          transform: translate(-50%) scale(0);
+  position: absolute;
+  background: #1a1c21;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
+  z-index: 2;
+  box-sizing: border-box;
+}
+
+.draftJsToolbar__toolbar__dNtBH:after, .draftJsToolbar__toolbar__dNtBH:before {
+  top: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.draftJsToolbar__toolbar__dNtBH:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-top-color: #1a1c21;
+  border-width: 4px;
+  margin-left: -4px;
+  border-radius: 18px;
+}
+
+.draftJsToolbar__toolbar__dNtBH:before {
+  border-color: rgba(221, 221, 221, 0);
+  border-top-color: #1a1c21;
+  border-width: 9px;
+  margin-left: -9px;
+  margin-top: -3px;
 }
