tweak editor spaing

--- a/packages/web/src/App/Components/CreateStory/Styles/EditorStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/EditorStyles.css
@@ -21,6 +21,10 @@
   padding-bottom: 60px;
 }
 
+.editorNoPadding {
+  padding-bottom: 0;
+}
+
 .editorBlockquote {
   font-family: 'Source Sans Pro';
   font-style: italic;
