--- a/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
@@ -89,7 +89,7 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
 }
 .draftJsToolbar__separator__3U7qt {
   display: inline-block;
-  border-right: 1px solid #9e9e9e;
+  border-right: 1px solid #757575;
   height: 20px;
   margin: 0 0.25em 3px;
 }
@@ -100,7 +100,7 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   position: absolute;
   background: #1a1c21;
   border-radius: 4px;
-  box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
+  box-shadow: 0px 1px 3px 0px rgb(202, 128, 128);
   z-index: 2;
   box-sizing: border-box;
 }
