--- a/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
@@ -54,33 +54,33 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
 */
 .draftJsToolbar__buttonWrapper__1Dmqh {
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 
 .draftJsToolbar__button__qi1gf {
-  background: #1a1c21;
-  color: #fff;
+  background: #fff;
+  color: #1a1c21;
   font-size: 18px;
   border: 0;
   padding-top: 5px;
   vertical-align: bottom;
-  height: 34px;
+  height: 44px;
   width: 36px;
-  border-radius: 4px;
+  border-radius: 6px;
 
 }
 
 .draftJsToolbar__button__qi1gf svg {
-  fill: #fff;
+  fill: #1a1c21;
 }
 
 .draftJsToolbar__button__qi1gf:hover, .draftJsToolbar__button__qi1gf:focus {
-  background: #1a1c21;
+  background: #fff;
   outline: 0; /* reset for :focus */
 }
 
 .draftJsToolbar__active__3qcpF {
-  background: #1a1c21;
+  background: #fff;
   color: #ed1e2e;
 }
 
@@ -98,9 +98,9 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   -webkit-transform: translate(-50%) scale(0);
           transform: translate(-50%) scale(0);
   position: absolute;
-  background: #1a1c21;
-  border-radius: 4px;
-  box-shadow: 0px 1px 3px 0px rgb(202, 128, 128);
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.24);
   z-index: 2;
   box-sizing: border-box;
 }
@@ -118,16 +118,15 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
 
 .draftJsToolbar__toolbar__dNtBH:after {
   border-color: rgba(255, 255, 255, 0);
-  border-top-color: #1a1c21;
+  border-top-color: #fff;
   border-width: 4px;
   margin-left: -4px;
-  border-radius: 18px;
 }
 
 .draftJsToolbar__toolbar__dNtBH:before {
-  border-color: rgba(221, 221, 221, 0);
-  border-top-color: #1a1c21;
-  border-width: 9px;
-  margin-left: -9px;
-  margin-top: -3px;
+  border-color: rgba(255, 255, 255, 0);
+  border-top-color: #fff;
+  border-width: 6px;
+  margin-left: -6px;
+  /* margin-top: -3px; */
 }
