links display in editing mode; sidebar style and button changes

--- a/packages/web/src/App/Components/CreateStory/SidebarPlugin/buttonStyles.css
+++ b/packages/web/src/App/Components/CreateStory/SidebarPlugin/buttonStyles.css
@@ -1,3 +1,5 @@
+/* class names derived from 'draft-js-side-toolbar-plugin/lib/plugin.css' */
+
 .draftJsToolbar-buttonWrapper {
   display: inline-block;
 }
