--- a/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
+++ b/packages/web/src/App/Components/CreateStory/Styles/ToolbarStyles.css
@@ -1,51 +1,13 @@
 /*
 SIDE TOOLBAR
 
-Note: Custom theming through the side toolbar plugin is currently not working, so
-modifying the Side Toolbar classes directly. Should be revised later
+Styles adapted to styled components for forked custom SidebarPlugin, see:
 
-class names derived from 'draft-js-side-toolbar-plugin/lib/plugin.css'
+../SidebarPlugin/BlockTypeSelect.js
+../SidebarPlugin/Toolbar.js
+../SidebarPlubin/buttonStyles.css
 */
 
-@import '../../../../../node_modules/draft-js-side-toolbar-plugin/lib/plugin.css';
-
-.draftJsToolbar__blockType__27Jwn {
-  cursor: auto;
-  margin-top: -5px;
-  border: 1px solid #757575;
-  background-size: cover;
-  background-image:
-    url('../../../Shared/Images/ht-icons/icon_create-plus.png');
-}
-
-.draftJsToolbar__blockType__27Jwn svg {
-  fill: none;
-}
-
-.draftJsToolbar__popup__GHzbY {
-  border: 1px solid #757575;
-}
-
-.draftJsToolbar__popup__GHzbY:before {
-  border-bottom-color: #757575
-}
-
-.draftJsToolbar__button__qi1gf {
-  background: #fff;
-  color: #757575
-}
-
-.draftJsToolbar__button__qi1gf svg {
-  fill: #757575;
-}
-
-.draftJsToolbar__active__3qcpF {
-  color: #ed1e2e;
-}
-
-.draftJsToolbar__active__3qcpF svg {
-  fill: #ed1e2e;
-}
 
 /*
 INLINE TOOLBAR
@@ -67,11 +29,10 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   height: 44px;
   width: 36px;
   border-radius: 6px;
-
 }
 
 .draftJsToolbar__button__qi1gf svg {
-  fill: #1a1c21;
+  fill: #757575;
 }
 
 .draftJsToolbar__button__qi1gf:hover, .draftJsToolbar__button__qi1gf:focus {
@@ -87,12 +48,14 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
 .draftJsToolbar__active__3qcpF svg {
   fill: #ed1e2e;
 }
+
 .draftJsToolbar__separator__3U7qt {
   display: inline-block;
   border-right: 1px solid #757575;
   height: 20px;
   margin: 0 0.25em 3px;
 }
+
 .draftJsToolbar__toolbar__dNtBH {
   left: 50%;
   -webkit-transform: translate(-50%) scale(0);
@@ -100,11 +63,13 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   position: absolute;
   background: #fff;
   border-radius: 6px;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.24);
+  border: 1px solid #ddd;
+  box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
   z-index: 2;
   box-sizing: border-box;
 }
 
+/* caret shared style */
 .draftJsToolbar__toolbar__dNtBH:after, .draftJsToolbar__toolbar__dNtBH:before {
   top: 100%;
   left: 50%;
@@ -116,6 +81,7 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   pointer-events: none;
 }
 
+/* caret white */
 .draftJsToolbar__toolbar__dNtBH:after {
   border-color: rgba(255, 255, 255, 0);
   border-top-color: #fff;
@@ -123,10 +89,10 @@ class names derived from draft-js-inline-toolbar-plugin/lib/plugin.css
   margin-left: -4px;
 }
 
+/* border for caret */
 .draftJsToolbar__toolbar__dNtBH:before {
   border-color: rgba(255, 255, 255, 0);
-  border-top-color: #fff;
+  border-top-color: #ddd;
   border-width: 6px;
   margin-left: -6px;
-  /* margin-top: -3px; */
 }
